# codest

./: .gitignore  README.md  pyproject.toml  setup.py
installer/: .env.example  README.md  build_installer.sh
installer/Resources/ja.lproj/: conclusion.txt  description.txt  license.txt  welcome.txt
installer/scripts/: cleanup.sh  env.sh  notarization.sh  package.sh  postinstall  preinstall  prepare.sh  validation.sh  version.sh
src/codest/: __init__.py  __main__.py  cli.py  collector.py  constants.py  document_generator.py  exceptions.py  file_collector.py  gitignore.py  normalize_paths.py
tests/: conftest.py  test_collector.py  test_document_generator.py  test_file_collector.py  test_gitignore.py  test_path_handling.py
