[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "codest"
description = "A tool to collect and organize source code into a single document"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["source", "code", "collection", "documentation", "digest"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = []
dynamic = ["version"]

[project.scripts]
codest = "codest.cli:main"

[tool.setuptools_scm]
write_to = "src/codest/_version.py"
